# experiment-support-system

./: .gitignore  MANIFEST.in  Pipfile  README.md  README.txt  alembic.ini  gulpfile.js  package.json  pyproject.toml  setup.py  test.ini
.github/old_workflows/: deploy-docker.yml
.github/workflows/: e2e-test.yml  e2e.yml  tests.yml
alembic/: env.py
alembic/versions/: 806549e48118_create_user.py
dev/: .env  config.yaml  docker-compose.yaml
docker/: Dockerfile  production.ini  start_ess.sh
ess/: __init__.py  __main__.py  settings.py  util.py
ess/alembic/versions/: 7db5e61bae6b_initial_user_model.py  87156bf83a36_create_experiments_table.py  f5af6820c0f1_add_screen_model.py
ess/cli/: __init__.py  db.py
ess/compiler/: __init__.py  page.py
ess/models/: __init__.py  experiment.py  screen.py  user.py
ess/server/: __init__.py  security.py  utils.py
ess/server/backend/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
ess/server/routes/: __init__.py  experiments.py  frontend.py  screens.py  users.py
old/ess/: routes.py  session.py
old/ess/models/: participant.py  user.py
old/ess/scripts/: config.py  settings.py
old/ess/static/: frontend.css  plugins.js
old/ess/templates/: root.jinja2
old/ess/views/: admin.py  default.py  error.py
old/js/plugins/: ajax-fill.js  form-action-buttons.js
old/theme/: _experiment.scss  _forms.scss  _icons.scss  _page.scss  _questions.scss  _verification.scss
src/ess/: __init__.py  permissions.py  routes.py  session.py  util.py
src/ess/models/: __init__.py  experiment.py  experiment_permissions.py  page.py  participant.py  question.py  question_type.py  question_type_group.py  question_types.py  setting.py  transition.py  user.py
src/ess/scripts/: __init__.py  admin.py  config.jinja2  cron.py  db.py  questions.json
src/ess/static/: backend.css  frontend.css  plugins.js  theme.css
src/ess/tests/: __init__.py  views.py
src/theme/: _experiment.scss  _fonts.scss  _forms.scss  _foundation-extensions.scss  _generic.scss  _icons.scss  _overlay.scss  _page.scss  _question-types.scss  _settings.scss  app.scss  backend.scss  frontend.scss
tests/: .env  util.ts
tests/basic/: favicon.ts  landing.ts
tests/experiment/: access.ts  core.ts  create.ts  delete.ts  permissions.ts  status.ts
tests/frontend/: basic.ts  conditional.ts
tests/page/: access.ts  create.ts  delete.ts  edit.ts
tests/question/: create.ts
tests/transition/: access.ts  create.ts  delete.ts  edit.ts
tests/user/: login.ts  profile.ts  register.ts
(+200 files in other folders)
