[tool.poetry]
name = "ess"
version = "0.1.0"
description = "Web-based Experiment Support System"
authors = ["Mark <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyramid = "^1.10.4"
pyramid-jinja2 = "^2.8"
pyramid-tm = "^2.4"
sqlalchemy = "^1.3.16"
transaction = "^3.0.0"
waitress = "^1.4.3"
click = "^7.1.1"
pyramid-nacl-session = "^0.3"
decorator = "^4.4.2"
cerberus = "^1.3.2"
sqlalchemy-json = "^0.4.0"
email-validator = "^1.0.5"
inflect = "^4.1.0"
pwh_pyramid_session = "^0.2.0"
pwh_permissions = {version = "^1.1.0", extras = ["pyramid"]}

[tool.poetry.dev-dependencies]
webtest = ">=1.3.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
flake8-print = "^3.1.4"
tox = "^3.14.6"
pre-commit = "^2.2.0"
pyramid_debugtoolbar = "^4.6.1"
pylint = "^2.4.4"

[tool.poetry.scripts]
ess = "ess.scripts:main"

[tool.poetry.extras]
postgresql = ["psycopg2"]

[tool.poetry.plugins."paste.app_factory"]
main = "ess:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
