[tool.poetry]
name = "ess"
version = "2.0.0-a0"
description = "Web-based Experiment Support System"
authors = ["Mark <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.83.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
alembic = "^1.8.1"
lark = "^1.1.2"
Authlib = "^1.1.0"
httpx = "^0.23.0"
itsdangerous = "^2.1.2"
typer = {extras = ["all"], version = "^0.6.1"}
SQLAlchemy = "^1.4.41"
asyncpg = {version = "^0.26.0", optional = true}
sqlalchemy-json = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-print = "^5.0.0"
flake8-docstrings = "^1.6.0"
flake8-annotations = "^2.9.1"
pre-commit = "^2.20.0"
tox = "^3.25.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
postgresql = ["asyncpg"]
